@@ -9,6 +9,7 @@
 #define SkM44_DEFINED
 
 #include "include/core/SkMatrix.h"
+#include "include/core/SkRect.h"
 #include "include/core/SkScalar.h"
 
 struct SK_API SkV2 {
@@ -225,6 +226,9 @@ public:
         return m;
     }
 
+    // Scales and translates 'src' to fill 'dst' exactly.
+    static SkM44 RectToRect(const SkRect& src, const SkRect& dst);
+
     static SkM44 LookAt(const SkV3& eye, const SkV3& center, const SkV3& up);
     static SkM44 Perspective(float near, float far, float angle);
 
@@ -376,7 +380,6 @@ public:
         auto v4 = this->map(v.x, v.y, v.z, 0);
         return {v4.x, v4.y, v4.z};
     }
-
     ////////////////////// Converting to/from SkMatrix
 
     /* When converting from SkM44 to SkMatrix, the third row and
